JOTM-30/11/2018-Modificaciónes api oreo 8.1
Cambios recientes y estilos oreo 8.1

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_anticipo_tabla.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_anticipo_tabla.xml
@@ -172,6 +172,8 @@
                         android:inputType="numberDecimal"
                         android:textAlignment="textEnd"
                         android:textSize="30sp"
+                        tools:targetApi="P"
+                        android:textColor="@color/colorTextLogin"
                         tools:ignore="Autofill,LabelFor" />
                 </TableRow>
 
