--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_punto_venta_pagar.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_punto_venta_pagar.xml
@@ -171,7 +171,8 @@
                 tools:ignore="LabelFor"
                 tools:layout_editor_absoluteX="456dp"
                 tools:layout_editor_absoluteY="623dp"
-                tools:targetApi="o" />
+                tools:targetApi="P"
+                android:textColor="@color/colorTextLogin" />
 
             <Button
                 android:id="@+id/BtnPuntoVentaPagarActivityOpciones"
