--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_anticipo_tabla.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_anticipo_tabla.xml
@@ -167,6 +167,8 @@
                         android:contentDescription=""
                         android:textSize="24sp"
                         tools:ignore="Autofill,LabelFor"
+                        tools:targetApi="P"
+                        android:textColor="@color/colorTextLogin"
                         android:gravity="end" />
                 </TableRow>
 
