--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_punto_venta_pagar.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_punto_venta_pagar.xml
@@ -180,7 +180,8 @@
                 app:layout_constraintTop_toBottomOf="@+id/SPuntoVentaActivityCredito"
                 app:layout_constraintVertical_bias="0.314"
                 tools:ignore="LabelFor"
-                tools:targetApi="o"
+                tools:targetApi="P"
+                android:textColor="@color/colorTextLogin"
                 android:layout_marginRight="8dp" />
 
             <Button
