--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/campos_camionetas.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/campos_camionetas.xml
@@ -26,6 +26,8 @@
         android:maxLength="2"
         android:textAlignment="center"
         android:textSize="18sp"
+        tools:targetApi="P"
+        android:textColor="@color/colorTextLogin"
         tools:ignore="Autofill,LabelFor" />
 
 </LinearLayout>
