--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/punto_venta_item.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/punto_venta_item.xml
@@ -52,6 +52,8 @@
                 app:layout_column="2"
                 app:layout_gravity="fill"
                 app:layout_row="2"
+                tools:targetApi="P"
+                android:textColor="@color/colorTextLogin"
                 tools:ignore="Autofill,LabelFor" />
 
             <TextView
