--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_lectura_p5000.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_lectura_p5000.xml
@@ -98,7 +98,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                tools:targetApi="o"
+                tools:targetApi="P"
+                android:textColor="@color/colorTextLogin"
                 android:inputType="number"
                 android:visibility="gone" />
 
