--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/punto_venta_item.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/punto_venta_item.xml
@@ -51,6 +51,8 @@
                 android:textSize="18sp"
                 app:layout_column="2"
                 app:layout_gravity="fill"
+                tools:targetApi="P"
+                android:textColor="@color/colorTextLogin"
                 app:layout_row="2"
                 tools:ignore="Autofill,LabelFor" />
 
