--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/styles.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/styles.xml
@@ -31,6 +31,7 @@
         <item name="android:colorForeground">@color/textColorSistemaLogin</item>
         <item name="colorAccent">@color/primaryTextColor</item>
         <item name="colorPrimaryDark">@color/buttonBackgroundColor</item>
+        <item name="android:textColorSecondary">@color/primaryTextColor</item>
     </style>
     <style name="SagasTheme.Button" parent="Widget.AppCompat.Button.Colored">
         <item name="android:colorButtonNormal" tools:ignore="NewApi">@color/colorBackgroundSistemaLogin</item>
